[project]
name="pyVLMP"
        version="1.0.67"
authors = [
    {name = "Pablo Ibáñez-Freire", email = "p.ibanez.fre@gmail.com"},
]
description = "Virtual Lab Modeling Platform"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPLv3"}
classifiers = [
        "Development Status :: 3 - Alpha",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
]
dependencies = [
    "jsbeautifier","tqdm","pyGrained","JFIO","pyUAMMD"
]

[options]
include_package_data = true
